gcc/testsuite/gdc.test/fail_compilation/fail16.d
// ICE(template.c) in DMD0.080

int i;

template bar(T)
{
  void bar(int x) {}
}

template foo(alias X)
{
  bar!(typeof(X))(X);
}


void main()
{
  foo!(i);
}

